<resources>
    <string name="app_name">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="Username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="Register_link">Register Now!</string>
    <string name="login">LOGIN!</string>
    <string name="Login">Login</string>
    <string name="register">REGISTER</string>
    <string name="logout">LOGOUT</string>
    <string name="userName">Username</string>
    <string name="Name">Name</string>
    <string name="Emails">Email</string>
</resources>
